[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "j6s"
version = "1.0.2"
description = "Python wrapper for the 6S atmospheric radiative transfer model modified with JSON output"
readme = "README.md"
license = { text = "GPL" }
authors = [
    { name = "Raphael Mabit", email = "raphael.mabit@gmail.com" }
]
dependencies = []

[tool.setuptools]
packages = ["j6s"]
#include_package_data = true

#[tool.setuptools.package-data]
#"sixs_json" = ["sixs_json/6sV2.1/sixsV2.1"]

#[project.scripts]
#run_fortran = "my_package.run_fortran:run_fortran_executable"